# AGI

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONFIDENTIALITY.md  CONTRIBUTING.md  Dockerfile  FRAMEWORK_SUMMARY.md  LICENSE  LICENSE-APACHE-2.0.txt  LICENSE-MIT.txt  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
agi/: __init__.py
agi/core/: __init__.py  inference.py  model.py  neural_network.py  trainer.py
agi/utils/: __init__.py  context_manager.py  prompt_engineering.py
configs/: app.default.yaml  app.network.yaml
diagrams/: agent_loop.mmd  overview.mmd
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  index.md  plugins.md  references.md
docs/architecture/: components.md  dataflow.md  overview.md
docs/evaluation/: README.md
docs/governance/: README.md
docs/safety/: README.md  prompt_injection.md  threat_model.md
docs/templates/: DATA_CARD_TEMPLATE.md  MODEL_CARD_TEMPLATE.md  TOOL_CARD_TEMPLATE.md
docs/use_cases/: dev_assistant.md  multi_agent_team.md  research_assistant.md  workflow_runner.md
eval/: sample_cases.jsonl
examples/: README.md  code_generation.py  creative_writing.py  question_answering.py  run_dev_assistant.py  run_eval.py  run_research_assistant.py  text_generation.py
infra/k8s/: README.md  deployment.yaml  service.yaml
prompts/: system_prompt.txt  tool_call_schema.md
skills/: README.md
tests/: test_agent_mock.py  test_calculator.py
use_cases/: README.md  chatbot.py  content_generation.py  data_analysis.py
