[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agi-framework"
version = "1.0.0"
description = "A comprehensive framework for building Artificial Generative Intelligence systems"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "kennyb7322"}
]
keywords = [
    "artificial intelligence",
    "generative ai",
    "machine learning",
    "deep learning",
    "neural networks",
    "nlp",
    "text generation",
    "ai framework"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/kennyb7322/AGI"
Documentation = "https://github.com/kennyb7322/AGI/tree/main/docs"
Repository = "https://github.com/kennyb7322/AGI"
"Bug Tracker" = "https://github.com/kennyb7322/AGI/issues"

[tool.setuptools]
packages = ["agi", "agi.core", "agi.utils"]
