[project]
name = "agi-framework"
version = "0.1.0"
description = "A modern, safe-by-default scaffold for building agentic AI systems (tools + memory + planning + eval)."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Kenny B (kennyb7322)"},
]
dependencies = [
  "pydantic>=2.0",
  "typer>=0.12",
  "rich>=13.0",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "httpx>=0.24",
  "fastapi>=0.110",
  "uvicorn>=0.23",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "mypy>=1.5",
  "ruff>=0.4",
  "types-PyYAML",
]

[project.scripts]
agi = "agi.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true

